docs: finalize rebranding and versioning references
- Updated remaining v4.0.0 references to v1.0.0
- Cleaned up installation instructions in release workflow
- Verified no remaining legacy 'atomsmp' or 'atomfix' strings in code

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
             
             ### 📦 Installation
             1. Stop your server.
-            2. Delete any old `AtomSMPFixer` or `AtomGuard` JARs.
+            2. Delete any old `AtomGuard` or `AtomSMPFixer` JARs from the plugins folder.
             3. Upload the new `AtomGuard-${{ github.ref_name }}.jar`.
             4. Start your server.
             
