feat: add 13 new security modules to Velocity and Core
Implemented a comprehensive set of new security protections:
- IPTables Integration: Kernel-level IP/Subnet banning via ProcessBuilder.
- Account Firewall: Async account age checks (Ashcon API) and persistent UUID/name blacklist.
- Country Filtering: GeoIP2 based country blocking with weekly automatic updates.
- FastChat Control: Rate limiting, duplicate message detection, and pattern analysis (Caps/Repeated Chars/Links).
- Firewall Exception & Enhanced Whitelisting: Support for CIDR, ASN, Country, and Username exceptions.
- Nickname Blocking: Regex and pattern-based username filtering in AntiBot.
- Password Checks: SHA-256 common password list and similarity detection across IPs.
- Rate Limiting: Granular per-IP and global connection/ping speed limiting.
- Reconnect Control: Detection of crash loops and short sessions (Join-Quit loops).
- VPN/Proxy Detection: Multi-provider chain including AbuseIPDB and IP2Proxy.
- External Lists: Automatic syncing with online blocklists (Spamhaus, FireHOL, TOR).
- Latency Checks: Bot detection via handshake/login duration analysis.

Integration:
- Updated ConnectionListener to process all new pre-login and post-login checks.
- Implemented AuthListener in Core to sync password hashes with Velocity for checks.
- Updated config.yml and messages_tr.yml with all necessary keys and localization.

--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -467,12 +467,30 @@ moduller:
   # Gelişmiş Sohbet ve Tab-Complete
   gelismis-sohbet:
     aktif: true
-    # Unicode crash karakterlerini filtrele
     unicode-filtre: true
-    # Saniyede maksimum tab-complete isteği
     max-tab-istegi-saniye: 5
-    # Komutlarda özel karakter kontrolü
     komut-karakter-kontrol: true
+    
+    # Hız Limiti (Flood)
+    hiz-limiti:
+      aktif: true
+      saniyede-max: 3
+      
+    # Aynı Mesaj Kontrolü
+    ayni-mesaj:
+      aktif: true
+      hatirlama-sayisi: 5
+      
+    # Büyük Harf Spam
+    buyuk-harf-spam:
+      aktif: true
+      esik-yuzde: 80
+      minimum-uzunluk: 10
+
+  # Şifre Kontrol Modülü (Auth Entegrasyonu)
+  sifre-kontrol:
+    aktif: true
+    # Velocity'ye gönderilecek şifre hash'leri için
 
   # Piston Sınırlandırıcı
   piston-sinirlandirici:
