--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,7 +17,26 @@
     <name>Atom Guard Core</name>
     <description>Core plugin module for Atom Guard</description>
 
+    <repositories>
+        <repository>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
+        <!-- AuthMe API -->
+        <dependency>
+            <groupId>fr.xephi</groupId>
+            <artifactId>authme</artifactId>
+            <version>5.6.0-beta2</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- API Module -->
         <dependency>
             <groupId>com.atomguard</groupId>
