--- a/core/pom.xml
+++ b/core/pom.xml
@@ -121,7 +121,7 @@
     </dependencies>
 
     <build>
-        <finalName>AtomGuard-${project.version}</finalName>
+        <finalName>AtomGuard-core-${project.version}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
